// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformColors colorToPaint #9b9fff 1`] = `
Object {
  "color": Object {
    "b": 1,
    "g": 0.6235294117647059,
    "r": 0.6078431372549019,
  },
  "opacity": 1,
  "type": "SOLID",
}
`;

exports[`transformColors colorToPaint linear-gradient(#e66465, #9198e5) 1`] = `
Object {
  "gradientStops": Array [
    Object {
      "color": Object {
        "a": 1,
        "b": 0.396078431372549,
        "g": 0.39215686274509803,
        "r": 0.9019607843137255,
      },
      "position": 0,
    },
    Object {
      "color": Object {
        "a": 1,
        "b": 0.8980392156862745,
        "g": 0.596078431372549,
        "r": 0.5686274509803921,
      },
      "position": 1,
    },
  ],
  "gradientTransform": Array [
    Array [
      6.123233995736766e-17,
      1,
      0,
    ],
    Array [
      -1,
      6.123233995736766e-17,
      1,
    ],
  ],
  "type": "GRADIENT_LINEAR",
}
`;

exports[`transformColors colorToPaint linear-gradient(30deg, #e66465, #9198e5) 1`] = `
Object {
  "gradientStops": Array [
    Object {
      "color": Object {
        "a": 1,
        "b": 0.396078431372549,
        "g": 0.39215686274509803,
        "r": 0.9019607843137255,
      },
      "position": 0,
    },
    Object {
      "color": Object {
        "a": 1,
        "b": 0.8980392156862745,
        "g": 0.596078431372549,
        "r": 0.5686274509803921,
      },
      "position": 1,
    },
  ],
  "gradientTransform": Array [
    Array [
      0.4999999999999999,
      -0.8660254037844387,
      0.6830127018922194,
    ],
    Array [
      0.8660254037844387,
      0.4999999999999999,
      -0.1830127018922193,
    ],
  ],
  "type": "GRADIENT_LINEAR",
}
`;

exports[`transformColors colorToPaint linear-gradient(to bottom, #e66465, #9198e5) 1`] = `
Object {
  "gradientStops": Array [
    Object {
      "color": Object {
        "a": 1,
        "b": 0.396078431372549,
        "g": 0.39215686274509803,
        "r": 0.9019607843137255,
      },
      "position": 0,
    },
    Object {
      "color": Object {
        "a": 1,
        "b": 0.8980392156862745,
        "g": 0.596078431372549,
        "r": 0.5686274509803921,
      },
      "position": 1,
    },
  ],
  "gradientTransform": Array [
    Array [
      6.123233995736766e-17,
      1,
      0,
    ],
    Array [
      -1,
      6.123233995736766e-17,
      1,
    ],
  ],
  "type": "GRADIENT_LINEAR",
}
`;

exports[`transformColors colorToPaint linear-gradient(to left, #e66465, #9198e5) 1`] = `
Object {
  "gradientStops": Array [
    Object {
      "color": Object {
        "a": 1,
        "b": 0.396078431372549,
        "g": 0.39215686274509803,
        "r": 0.9019607843137255,
      },
      "position": 0,
    },
    Object {
      "color": Object {
        "a": 1,
        "b": 0.8980392156862745,
        "g": 0.596078431372549,
        "r": 0.5686274509803921,
      },
      "position": 1,
    },
  ],
  "gradientTransform": Array [
    Array [
      -1,
      -1.2246467991473532e-16,
      1,
    ],
    Array [
      1.2246467991473532e-16,
      -1,
      1,
    ],
  ],
  "type": "GRADIENT_LINEAR",
}
`;

exports[`transformColors colorToPaint linear-gradient(to right, #e66465, #9198e5) 1`] = `
Object {
  "gradientStops": Array [
    Object {
      "color": Object {
        "a": 1,
        "b": 0.396078431372549,
        "g": 0.39215686274509803,
        "r": 0.9019607843137255,
      },
      "position": 0,
    },
    Object {
      "color": Object {
        "a": 1,
        "b": 0.8980392156862745,
        "g": 0.596078431372549,
        "r": 0.5686274509803921,
      },
      "position": 1,
    },
  ],
  "gradientTransform": Array [
    Array [
      1,
      0,
      0,
    ],
    Array [
      -0,
      1,
      0,
    ],
  ],
  "type": "GRADIENT_LINEAR",
}
`;

exports[`transformColors colorToPaint linear-gradient(to top, #e66465, #9198e5) 1`] = `
Object {
  "gradientStops": Array [
    Object {
      "color": Object {
        "a": 1,
        "b": 0.396078431372549,
        "g": 0.39215686274509803,
        "r": 0.9019607843137255,
      },
      "position": 0,
    },
    Object {
      "color": Object {
        "a": 1,
        "b": 0.8980392156862745,
        "g": 0.596078431372549,
        "r": 0.5686274509803921,
      },
      "position": 1,
    },
  ],
  "gradientTransform": Array [
    Array [
      6.123233995736766e-17,
      -1,
      1,
    ],
    Array [
      1,
      6.123233995736766e-17,
      0,
    ],
  ],
  "type": "GRADIENT_LINEAR",
}
`;

exports[`transformColors colorToPaint rgba(27,31,35,0.2) 1`] = `
Object {
  "color": Object {
    "b": 0.13725490196078433,
    "g": 0.12156862745098039,
    "r": 0.10588235294117647,
  },
  "opacity": 0.2,
  "type": "SOLID",
}
`;

exports[`transformColors colorToPaint with percentage: linear-gradient(#e66465, #9198e5 80%) 1`] = `
Object {
  "gradientStops": Array [
    Object {
      "color": Object {
        "a": 1,
        "b": 0.396078431372549,
        "g": 0.39215686274509803,
        "r": 0.9019607843137255,
      },
      "position": 0,
    },
    Object {
      "color": Object {
        "a": 1,
        "b": 0.8980392156862745,
        "g": 0.596078431372549,
        "r": 0.5686274509803921,
      },
      "position": 0.8,
    },
  ],
  "gradientTransform": Array [
    Array [
      6.123233995736766e-17,
      1,
      0,
    ],
    Array [
      -1,
      6.123233995736766e-17,
      1,
    ],
  ],
  "type": "GRADIENT_LINEAR",
}
`;

exports[`transformColors colorToRGB #9b9fff 1`] = `
Object {
  "b": 1,
  "g": 0.6235294117647059,
  "r": 0.6078431372549019,
}
`;

exports[`transformColors colorToRGB #ff0000 1`] = `
Object {
  "b": 0,
  "g": 0,
  "r": 1,
}
`;

exports[`transformColors colorToRGB #ff00ff00 1`] = `
Object {
  "b": 1,
  "g": 0,
  "r": 1,
}
`;

exports[`transformColors colorToRGB aliceblue 1`] = `
Object {
  "b": 1,
  "g": 0.9725490196078431,
  "r": 0.9411764705882353,
}
`;

exports[`transformColors colorToRGB red 1`] = `
Object {
  "b": 0,
  "g": 0,
  "r": 1,
}
`;

exports[`transformColors colorToRGB rgb(255, 0, 255) 1`] = `
Object {
  "b": 1,
  "g": 0,
  "r": 1,
}
`;

exports[`transformColors colorToRGB rgba(255, 255, 255, 1.0) 1`] = `
Object {
  "b": 1,
  "g": 1,
  "r": 1,
}
`;

exports[`transformColors colorToRGB transparent 1`] = `
Object {
  "b": 0,
  "g": 0,
  "r": 0,
}
`;

exports[`transformColors colorToRGBA #ff0000 0.5 1`] = `
Object {
  "a": 0.5,
  "b": 0,
  "g": 0,
  "r": 1,
}
`;
